<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/retirementHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/retirement_home"
        android:textSize="24sp"
        android:layout_centerInParent="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/connectivityStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retirementHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/ready"
        android:textSize="18sp"
        android:textColor="@color/green"
        android:gravity="center" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectivityStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/connect"
        android:enabled="false" />

</RelativeLayout>
